--- a/Commons/main/res/layout/navigation_menu_sub_section_item.xml
+++ b/Commons/main/res/layout/navigation_menu_sub_section_item.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     android:background="@color/menu_light_gray"
-    android:orientation="vertical">
-    
-    <!-- TODO: remove text, add styling -->
-    <TextView android:id="@id/title"
-        android:layout_width="match_parent"
+    android:orientation="horizontal" >
+
+    <TextView
+        android:id="@id/title"
+        android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:gravity="center_vertical"
-        android:text="@string/app_name"
-        android:paddingLeft="16dp" />
-    
+        android:paddingLeft="16dp"
+        android:text="@string/app_name" />
+
+    <ImageView
+        android:id="@+id/external"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:src="@drawable/external_link_icon" />
+
 </LinearLayout>
