--- a/Discover-Bank-Phone/main/res/layout/navigation_bank_menu_frame.xml
+++ b/Discover-Bank-Phone/main/res/layout/navigation_bank_menu_frame.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/menu_light_gray" >
+
+    <RelativeLayout
+        android:id="@+id/footer_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
+
+        <include layout="@layout/navigation_footer" />
+    </RelativeLayout>
 
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/navigation_bank_menu_frame"
         android:name="com.discover.mobile.bank.navigation.BankNavigationMenuFragment"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" >
-    	
-        <include layout="@layout/navigation_footer"/>
-    </RelativeLayout>
+        android:layout_above="@+id/footer_layout"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
