US5472 Sliding drawer navigation
Updates from code review

--- a/Commons/main/res/layout/navigation_footer.xml
+++ b/Commons/main/res/layout/navigation_footer.xml
@@ -15,13 +15,12 @@
             android:id="@+id/navigation_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="15dp"
-            android:text="Version" />
+            android:paddingRight="@dimen/nav_footer_padding"/>
 
         <View
             android:id="@+id/navigation_divider"
-            android:layout_width="1dip"
-            android:layout_height="15dp"
+            android:layout_width="@dimen/nav_footer_divider_width"
+            android:layout_height="@dimen/nav_footer_divider_height"
             android:layout_toRightOf="@+id/navigation_version"
             android:background="@color/gray" />
 
@@ -30,8 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/navigation_divider"
-            android:paddingLeft="15dp"
-            android:text="Privacy Terms" />
+            android:paddingLeft="@dimen/nav_footer_padding"
+            android:text="@string/privacy_terms" />
     </LinearLayout>
 
     <TextView
@@ -39,7 +38,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/navigation_footer_top"
-        android:layout_centerHorizontal="true"
-        android:text="Discover Bank FDIC" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
