--- a/Commons/main/res/layout/navigation_menu_section_item.xml
+++ b/Commons/main/res/layout/navigation_menu_section_item.xml
@@ -7,7 +7,7 @@
     <View
         android:id="@+id/navigation_divider"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/nav_divider_height"
         android:background="@drawable/navigation_menu_divider_section_gradient" />
 
     <LinearLayout
@@ -16,27 +16,22 @@
         android:background="@drawable/navigation_menu_section_gradient"
         android:orientation="horizontal" >
 
-        <!-- android:background="@drawable/navigation_menu_section_gradient" -->
-
-
-        <!-- TODO: remove text, add styling -->
-
         <TextView
             android:id="@id/title"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:layout_height="@dimen/nav_section_height"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
+            android:paddingLeft="@dimen/nav_section_pading"
             android:text="@string/app_name"
-            android:textSize="20dp"
+            android:textSize="@dimen/nav_section_size"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/external"
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:layout_height="@dimen/nav_section_size"
             android:gravity="center_vertical"
-            android:paddingLeft="10dp"
+            android:paddingLeft="@dimen/nav_image_padding"
             android:src="@drawable/external_link_icon" />
     </LinearLayout>
 
