TA11625: Integrate Transaction Table - Completed integration.  Some things need to be handled, but it works.  Things that need to be handled include rotation and sending the user to the details screen, but that will come with rotation task and server integration task.

--- a/Discover-Bank-Phone/main/res/layout/bank_account_activity.xml
+++ b/Discover-Bank-Phone/main/res/layout/bank_account_activity.xml
@@ -7,8 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/light_gray_bkgrd"
-        android:paddingBottom="@dimen/forms_inner_padding"
-        android:paddingLeft="@dimen/forms_inner_padding" >
+        android:paddingBottom="@dimen/forms_inner_padding">
 
         <ImageButton
             android:id="@+id/help"
@@ -27,6 +26,7 @@
             android:layout_marginBottom="@dimen/table_inner_padding"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
+        	android:layout_marginLeft="@dimen/forms_inner_padding" 
             android:layout_toLeftOf="@+id/help"
             android:text="@string/activity_title" />
 
