--- a/Discover-Bank-Phone/main/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/main/res/layout/bank_table_item.xml
@@ -19,16 +19,15 @@
 	        android:id="@+id/date"
 	    	android:layout_width="0dip"
 	    	android:layout_height="wrap_content"
-        	android:textColor="@color/blue_link"
-        	android:textSize = "@dimen/small_copy_min"
             android:paddingRight="@dimen/between_related_elements_padding"
+            style="@style/table_text"
 	    	android:layout_weight="1"/>
 
 	    <TextView 
 	        android:id="@+id/description"
 	    	android:layout_width="0dip"
 	    	android:layout_height="wrap_content"
-            style="@style/sub_copy_small"
+            style="@style/blue_table_text"
             android:paddingRight="@dimen/between_related_elements_padding"
 	    	android:layout_weight="2"/>
 
@@ -36,18 +35,19 @@
 	        android:id="@+id/amount"
 	    	android:layout_width="0dip"
 	    	android:layout_height="wrap_content"
-            style="@style/sub_copy_small"
-	    	android:layout_weight="1"/>
+            style="@style/table_text"
+	    	android:layout_weight="1"
+	    	android:gravity="right"/>
     
     </LinearLayout>
     
-	<View
+	<!-- <View
 	    android:id="@+id/dotted_line"
    		android:layout_width="wrap_content"
     	android:layout_height="1dp"
 	    android:background="@drawable/table_dotted_line"
 	    android:layout_alignParentRight="true"
 	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/content"/> 
+	    android:layout_below="@+id/content"/> --> 
 
 </RelativeLayout>
