--- a/Commons/main/res/layout/navigation_menu_list.xml
+++ b/Commons/main/res/layout/navigation_menu_list.xml
@@ -6,5 +6,6 @@
     android:paddingLeft="@dimen/nav_menu_list_padding"
     android:paddingRight="@dimen/nav_menu_list_padding"
     android:background="@color/body_copy"
+    android:choiceMode="singleChoice"
     android:dividerHeight="0dp"
     android:divider="@null" />
