US3609 : TA11634 - TA11636 - TA11637 - TA11638 - TA11639 - TA11641 - TA11643 - TA11756. ~ TA11634 Finished View Pager Widget Design. There is a single class that is the view pager, then subclasses of it are responsible for providing it with Fragments to show. TA11636 Cell Widget Integration. Created a list item generator that returns list items that can be inserted into the content table of a view pager fragment. This lets someone construct a list of elements and therefore a Fragment to show in the ViewPager easily. TA11637 Previous/Next Buttons. These buttons change the visible fragment by one forward or one back. TA11638 Load More. Added handling of loading more by calling a mock service call and appending the returned data to the current list of data. TA11639 Handle swipe gestures. Users can swipe to navigate through the fragments, they can also scroll up and down on the page when needed. The sliding nav menu is locked until the user reaches the very first fragment in the list, then the sliding menu is unlocked and they can swipe to oepn it. TA11640 Tested swiping left and right to move through Fragments. Tested rotation. Tested loading more data. Tested the next and previous buttons. Tested getting data from the previous fragment and passing it back (from Account Activity to the View Pager). TA11641 Handle Rotation. Added support for rotating the device. On rotation it will retain its data and the Fragment you were viewing. Moved account_item_detail_view from Card into Bank. It should have always been in Bank. Added a BankExtraKey for passing single items in bundles. Added support in the navigateToAccountActivityPage method inside of the BankNavigator to support load more and navigation between the ViewPager and the Account Activity page. Commented the DetailViewPager and cleaned up the code a little bit. Added an FragmentOnBackPressed interface so that Fragments can override the back button if needed.

--- a/Discover-Bank-Phone/main/res/layout/account_item_detail_view.xml
+++ b/Discover-Bank-Phone/main/res/layout/account_item_detail_view.xml
@@ -3,16 +3,16 @@
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/light_gray_bkgrd" 
-    android:orientation="vertical">
+    android:background="@drawable/light_gray_bkgrd"
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/relative_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:paddingRight="@dimen/forms_inner_padding"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingTop="@dimen/forms_inner_padding">
+        android:paddingRight="@dimen/forms_inner_padding"
+        android:paddingTop="@dimen/forms_inner_padding" >
 
         <TextView
             android:id="@+id/title"
@@ -21,27 +21,31 @@
             android:layout_height="wrap_content"
             android:text="@string/edit" />
 
-        <Button
+        <ImageView
             android:id="@+id/previous_button"
             style="@style/white_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/next_button"
-            android:text="&lt;" />
+            android:contentDescription="@string/empty"
+            android:src="@drawable/drk_blue_arrow_left_square" />
 
-        <Button
+        <ImageView
             android:id="@+id/next_button"
             style="@style/white_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/groups_of_elements_padding"
             android:layout_toLeftOf="@+id/help_button"
-            android:text=">" />
+            android:contentDescription="@string/empty"
+            android:src="@drawable/drk_blue_arrow_right_square" />
 
         <ImageView
             android:id="@+id/help_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:contentDescription="@string/empty"
             android:src="@drawable/question_mark_icon" />
 
         <View
@@ -55,8 +59,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/between_related_elements_padding" >
+        android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
