--- a/Discover-Bank-Phone/main/res/layout/bank_account_group_view.xml
+++ b/Discover-Bank-Phone/main/res/layout/bank_account_group_view.xml
@@ -2,6 +2,7 @@
      	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:paddingTop="@dimen/groups_of_elements_padding"
+   		android:paddingBottom="@dimen/groups_of_elements_padding"
    		android:paddingLeft="@dimen/forms_inner_padding"
         android:paddingRight="@dimen/forms_inner_padding"
    		android:orientation="vertical" >
@@ -11,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/acct_type_str"
-        android:layout_marginBottom="@dimen/between_related_elements_padding"
+        android:layout_marginTop="@dimen/between_related_elements_padding"
         style="@style/body_copy_title"/>
      
      <TextView
