--- a/Discover-Bank-Phone/main/res/layout/bank_account_view.xml
+++ b/Discover-Bank-Phone/main/res/layout/bank_account_view.xml
@@ -9,6 +9,7 @@
     
 	 <TextView
         android:id="@+id/acct_nickname"
+        android:singleLine="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,6 +21,7 @@
 	 	 
 	  <TextView
         android:id="@+id/acct_ending"
+        android:singleLine="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/acct_nickname"
@@ -30,6 +32,7 @@
 	  	 
 	 <TextView
         android:id="@+id/acct_balance"
+        android:singleLine="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/acct_nickname"
