--- a/Discover-Bank-Phone/main/res/layout/view_pager_list_item.xml
+++ b/Discover-Bank-Phone/main/res/layout/view_pager_list_item.xml
@@ -35,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/top_label"
-            android:text="@string/edit" />
+            android:text="@string/edit"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/bottom_label"
