--- a/Discover-Bank-Phone/res/layout/bank_table.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table.xml
@@ -25,7 +25,7 @@
         android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_marginTop="@dimen/table_inner_padding"
         android:orientation="horizontal"
-        android:weightSum="5" >
+        android:weightSum="4" >
 
         <RelativeLayout
             android:layout_width="0dip"
@@ -38,9 +38,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recent_activity_date"
-                android:textStyle="bold" />
+                />
 
-            <ImageView
+          <ImageView
                 android:id="@+id/date_filter_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,7 +48,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@+id/date_filter"
-                android:background="@drawable/orange_arrow_down" />
+                android:background="@drawable/orange_arrow_down"
+                android:visibility="gone" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -78,7 +79,7 @@
         <RelativeLayout
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
 	    	android:gravity="right" >
 
             <TextView
