--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -32,6 +32,11 @@
         <item name="android:textStyle">bold</item>
     </style>
     
+    <style name="plain_body_copy_title">
+        <item name="android:textColor">@color/body_copy</item>
+        <item name="android:textSize">@dimen/body_copy_min</item>
+    </style>
+    
     <style name="normal_static_text">
         <item name="android:textColor">@color/sub_copy</item>
         <item name="android:textSize">@dimen/small_copy_max</item>
