--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -11,5 +11,7 @@
     <string name="activity_current_balance">Current Balance:</string>
     <string name="activity_posted_button">Activity</string>
     <string name="activity_scheduled_button">Scheduled</string>
-  
+    <string name="activity_no_scheduled">You have no scheduled transactions.</string>
+    <string name="activity_no_posted">No activity has posted to your account.</string>
+    <string name="activity_table_name">Transactions</string>
 </resources>
