US3628 : TA11716 View Pager Widget Integration. The view pager for View Payment Details has been created. It allows users to swipe through their payment details or use the next and previous buttons to do the same thing. TA11717 Previous/Next buttons, change the fragment that is visible. TA11718 Handle Rotation. Tested that rotation persists the data and the visible fragment. TA11720 Button placeholders. The buttons for edit and delete payment exist and are only shown on scheduled payments. They are hidden on completed payments. It still needs to support hiding the edit and delte buttons if the user has a joint account. It does not support exactly the kind of load more that is listed in the acceptance criteria just yet. Needs some javadoc.

--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -16,6 +16,7 @@
     <string name="to">To</string>
     <string name="send_on">Send On</string>
     <string name="deliver_by">Deliver By</string>
+    <string name="delivered_on">Delivered On</string>
     <string name="frequency">Frequency</string>
     <string name="available_balance">Available Balance</string>
     <string name="memo">Memo</string>
@@ -24,4 +25,8 @@
     <string name="status">Status</string>
     <string name="confirmation_number">Confirmation Number</string>
     <string name="payment_detail">Payment Detail</string>
+    <string name="scheduled_payment">Scheduled Payment</string>
+    <string name="completed_payment">Completed Payment</string>
+    <string name="edit_payment">Edit Payment</string>
+    <string name="delete_payment">Delete Payment</string>
 </resources>
