--- a/Discover-Bank-Phone/res/layout/bank_table_item.xml
+++ b/Discover-Bank-Phone/res/layout/bank_table_item.xml
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    
-	<LinearLayout
-	    android:id="@+id/content"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentRight="true"
-	    android:layout_alignParentLeft="true"
-	    android:paddingRight="@dimen/between_related_elements_padding"
-	    android:paddingLeft="@dimen/between_related_elements_padding"
-	    android:paddingTop="@dimen/table_inner_padding"
-	    android:paddingBottom="@dimen/table_inner_padding"
-	    android:weightSum="4">
-    
-	    <TextView 
-	        android:id="@+id/date"
-	    	android:layout_width="0dip"
-	    	android:layout_height="wrap_content"
-            android:paddingRight="@dimen/between_related_elements_padding"
-            style="@style/table_text"
-	    	android:layout_weight="1"/>
+    android:layout_height="wrap_content" >
 
-	    <TextView 
-	        android:id="@+id/description"
-	    	android:layout_width="0dip"
-	    	android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:paddingBottom="@dimen/table_inner_padding"
+        android:paddingTop="@dimen/table_inner_padding"
+        android:weightSum="4" >
+
+        <TextView
+            android:id="@+id/date"
+            style="@style/table_text"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingRight="@dimen/between_related_elements_padding" />
+
+        <TextView
+            android:id="@+id/description"
             style="@style/blue_table_text"
-            android:paddingRight="@dimen/between_related_elements_padding"
-	    	android:layout_weight="2"/>
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:paddingRight="@dimen/between_related_elements_padding" />
 
-	    <TextView 
-	        android:id="@+id/amount"
-	    	android:layout_width="0dip"
-	    	android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/amount"
             style="@style/table_text"
-	    	android:layout_weight="1"
-	    	android:gravity="right"/>
-    
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right" />
     </LinearLayout>
-    
-	<!-- <View
+
+    <!--
+         <View
 	    android:id="@+id/dotted_line"
    		android:layout_width="wrap_content"
     	android:layout_height="1dp"
 	    android:background="@drawable/table_dotted_line"
 	    android:layout_alignParentRight="true"
 	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/content"/> --> 
+	    android:layout_below="@+id/content"/>
+    -->
 
 </RelativeLayout>
