US5520: Committing code for rebase.

--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -18,4 +18,10 @@
 	<string name="select_payee_title">Select Payee</string>
 	<string name="select_payee_empty">You currently have no payees set up.</string>
 	<string name="select_payee_add_new">Add New Payee</string>
+	
+	<!-- Review payments -->
+	<string name="review_payments_title">Review Payments</string>
+	<string name="review_payments_filter_one">Date</string>
+	<string name="review_payments_filter_two">Payee</string>
+	<string name="review_payments_filter_three">Amount</string>
 </resources>
