--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -33,7 +33,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/large_margin"
         android:background="@drawable/drk_blue_arrow_down" />
 
     <TextView
@@ -186,8 +186,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/date_filter"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_marginLeft="@dimen/small_margin"
                 android:layout_toRightOf="@+id/date_filter"
                 android:background="@drawable/orange_arrow_down"
                 android:visibility="visible" />
@@ -210,8 +210,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/description_filter"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_marginLeft="@dimen/small_margin"
                 android:layout_toRightOf="@+id/description_filter"
                 android:background="@drawable/orange_arrow_down"
                 android:visibility="gone" />
@@ -235,8 +235,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/amount_filter"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_marginLeft="@dimen/small_margin"
                 android:layout_toRightOf="@+id/amount_filter"
                 android:background="@drawable/orange_arrow_down"
                 android:visibility="gone" />
