--- a/Discover-Commons/res/layout/action_bar_menu_layout.xml
+++ b/Discover-Commons/res/layout/action_bar_menu_layout.xml
@@ -46,26 +46,6 @@
         android:background="@drawable/discover_blk_logo_login"
         android:visibility="gone" />
 
-    <Button
-        android:id="@+id/logout_button"
-        style="@style/logout_actionbar_button"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignBottom="@+id/navigation_button"
-        android:layout_alignTop="@+id/navigation_button"
-        android:layout_toLeftOf="@+id/dummy_view"
-        android:text="@string/log_out"
-        android:visibility="gone" />
-
-    <!-- This view allows for the spacing between the logout button and the right side of the screen -->
-
-    <TextView
-        android:id="@+id/dummy_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:visibility="invisible" />
-
     <ImageView
         android:id="@+id/gradient_line"
         android:layout_width="fill_parent"
@@ -73,5 +53,25 @@
         android:layout_alignParentBottom="true"
         android:background="@color/stroke_ruling_line"
         android:src="@drawable/gradiant_line" />
+
+    <ImageView
+        android:id="@+id/logout_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/logout_button"
+        android:layout_above="@+id/gradient_line"
+        android:background="@drawable/log_out_button_line"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/logout_button"
+        style="@style/logout_actionbar_button"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/log_out_button"
+        android:text="@string/log_out"
+        android:visibility="gone" />
 
 </RelativeLayout>
