--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -59,6 +59,11 @@
      <dimen name="nav_image_padding">10dp</dimen>
      <dimen name="nav_footer_height">1dp</dimen>
      
+     <!-- Logout Button -->
+     <dimen name="logout_padding">6dp</dimen>
+     <dimen name="logout_margin_top">4dp</dimen>
+     <dimen name="logout_margin_bottom">1dp</dimen>
+     
     
   
     
