--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -223,11 +223,14 @@
         <item name="android:paddingRight">5dp</item>
     </style>
     
-    <style name="logout_actionbar_button" parent="white_button">
+    <style name="logout_actionbar_button">
         <item name="android:textSize">14sp</item>
-	    <item name="android:layout_marginTop">4dp</item>
-	    <item name="android:layout_marginBottom">3dp</item>
-	    <item name="android:layout_marginRight">14dp</item>
+	    <item name="android:layout_marginTop">@dimen/logout_margin_top</item>
+	    <item name="android:layout_marginBottom">@dimen/logout_margin_bottom</item>
+	    <item name="android:paddingRight">@dimen/logout_padding</item>
+	    <item name="android:paddingLeft">@dimen/logout_padding</item>
+	    <item name="android:textStyle">bold</item>
+	    <item name="android:textColor">@color/sub_copy</item>
     </style>
       <style name="white_button">
         <item name="android:textColor">@color/sub_copy</item>
