ID: US6163 Schedule Payment Confirmation
Foundational Highlights:
- Created a Bank Progress Indicator
- Added Navigation Method Placeholders for navigation to Reivew Payment (Pending Completion) and Under Development Fragments
- Added method to show / hide status bar in BankNavigationRootActivity
- Added method to pop back till a specific fragment is reached

Test Cases:
Help Icon in Progress Indicator is rendered correctly and clickable
Progress Indicator shows only two steps, first step checked and confirmation selected
Text for Progress Indicator is Payment Shows text Payment Details in first step and Confirmation in second step
Verify PaymentDetail content is rendered correctly in BankPayConfirmFragment
Verify Action Button, Action Link, Feedback in BankPayConfirmFragment is clickable
Verify Status Bar is hidden on creation of fragment and hidden when the fragment is removed from focus
Verify onBackPress is disabled
Verify LogOut is functional from this fragment
Verify Navigation Menu can be accesssed from this view
Verify the status bar is viewable after navigating away from confirmation fragment
Verify the status bar is hidden when navigating to the fragment
Verify that the method popTillFragment works as specified in the comments.

--- a/Discover-Bank-Phone/res/values/string_samples.xml
+++ b/Discover-Bank-Phone/res/values/string_samples.xml
@@ -5,4 +5,6 @@
     <string name="acct_balance_str">$0.00</string>
     <string name="acct_type_str">Savings Account</string>
     <string name="acct_total_str">$0.00</string>
+    <string name="action_button">Action Button</string>
+    <string name="action_link">Action Link</string>
 </resources>
