--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -64,7 +64,10 @@
      <dimen name="logout_margin_top">4dp</dimen>
      <dimen name="logout_margin_bottom">1dp</dimen>
      
-    
-  
+     <!--Help Image Dimensions  -->
+     <dimen name="help_dimen">40dp</dimen>
+  	 
+     <!-- Divider Dimensions -->
+     <dimen name="divider_height">1dp</dimen>
     
 </resources>
