US5467 Status bar updates
Created a new status bar for bank. Converting name to lowercase then capitalizing the first letter. Hiding the old status bar for bank right now. It's possible this won't need to be done if the status bar for card is removed.

--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -12,4 +12,7 @@
             
     <!-- Splash Screen -->
     <dimen name="splash_progress_toppadding">55dp</dimen>
+    
+    <!-- Status bar height -->
+    <dimen name="status_bar_height">40dp</dimen>
 </resources>
