--- a/Discover-Bank-Phone/res/values/string_samples.xml
+++ b/Discover-Bank-Phone/res/values/string_samples.xml
@@ -7,4 +7,5 @@
     <string name="acct_total_str">$0.00</string>
     <string name="action_button">Action Button</string>
     <string name="action_link">Action Link</string>
+     <string name="status_text">Status Message</string>
 </resources>
